# collision-comparison

./: .gitignore  Dockerfile  README.md  compile_hpp-fcl.sh  main.code-workspace
benchmarks/: benchmark_python_gjk.sh  benchmark_rust_collision-rs.sh  benchmark_rust_gjk.sh
benchmarks/distance3d/: result.txt
compare/: CMakeLists.txt  bullet.cpp  bullet.h  collider.cpp  collider.h  fcl.cpp  fcl.h  jolt.cpp  jolt.h  main.cpp
compare-cpp/: CMakeLists.txt  README.md  bullet.cpp  collider.cpp  collider.h  cpp_result.json  fcl.h  jolt.cpp  libccd.cpp  libccd.h  main.cpp  utility.h
compare-python/: README  README.md  distance3d_result.json
compare-python/analyize/: analyize_atlas.py  analyize_nao.py  analyize_nao_complex.py  analyize_ur10.py  analyze_results.py
compare-python/analyze/: analyze_atlas.py  analyze_data.py  analyze_data_check_density.py  analyze_results.py  analyze_results_archive.py  analyze_results_archive_aggregated.py  color plot.py  strip_results_archive.py
compare-python/compare/: compare_distance3d.py  compare_nao.py  compare_nao_pybullet.py  compare_pybullet.py
compare-python/debug/: show_atlas.py  show_nao.py  show_nao_complex.py  show_uc1.py  show_uc1_ur10.py  show_uc2_ur10.py  show_uc5_ur10.py  show_uc6.py  show_uc6_ur10.py  show_ur10.py  show_ur10_complex.py  strip_results_archive.py
compare-python/src/: __init__.py  analyze.py  analyze_results.py  load_atlas.py  load_nao.py  load_uc1.py  load_uc2.py  load_uc5.py  load_uc6.py  load_ur10.py  test_file.py
compare-python/test_file/: from_atlas_urdf.py  from_nao_urdf.py  from_uc1_ur10.py  from_uc2_ur10.py  from_uc5_ur10.py  from_uc6_ur10.py  from_uc6_ur10_collision.py  from_ur10_urdf.py  random_primitive_shapes.py
compare-rs/: .gitignore  Cargo.toml  README.md
compare-rs/benches/: collision-rs.rs  gjk-rs.rs  ncollide.rs
compare-rs/src/: collision.rs  lib.rs  ncollide.rs
compare-rs/tests/: collision-rs.rs  gjk-rs.rs  ncollide.rs
data/: atlas_test_cases.json  test_data.json  uc1_ur10_collision_1.json  uc1_ur10_collision_10.json  uc1_ur10_collision_100.json  uc1_ur10_collision_1000.json  uc1_ur10_collision_10000.json  uc1_ur10_collision_1001.json  uc1_ur10_collision_1002.json  uc1_ur10_collision_1003.json  uc1_ur10_collision_1004.json  uc1_ur10_collision_1005.json  uc1_ur10_collision_1006.json  uc1_ur10_collision_1007.json  uc1_ur10_collision_1008.json  uc1_ur10_collision_1009.json  uc1_ur10_collision_101.json  uc1_ur10_collision_1010.json  uc1_ur10_collision_1011.json  uc1_ur10_collision_1012.json  uc1_ur10_collision_1013.json  uc1_ur10_collision_1014.json  uc1_ur10_collision_1015.json  uc1_ur10_collision_1016.json  uc1_ur10_collision_1017.json  uc1_ur10_collision_1018.json  uc1_ur10_collision_1019.json  uc1_ur10_collision_102.json  uc1_ur10_collision_1020.json  uc1_ur10_collision_1021.json  uc1_ur10_collision_1022.json  uc1_ur10_collision_1023.json  uc1_ur10_collision_1024.json  uc1_ur10_collision_1025.json  uc1_ur10_collision_1026.json  uc1_ur10_collision_1027.json  uc1_ur10_collision_1028.json  uc1_ur10_collision_1029.json  uc1_ur10_collision_103.json  uc1_ur10_collision_1030.json  (+20341 more)
data/urdfs/: atlas.urdf  mia_hand_on_ur10.urdf  nao.urdf  uc1_asin.urdf  uc2_osai.urdf  uc5_slvr.urdf  uc6_ines.urdf
docker/: Dockerfile
profile/: profile_gjk-rs.sh
results/1/: cpp_result.json  distance3d_result.json  pybullet_result.json
results/10/: cpp_result.json  distance3d_result.json  pybullet_result.json
results/11/: cpp_result.json  distance3d_result.json  pybullet_result.json
results/12/: cpp_result.json  distance3d_result.json  pybullet_result.json
results/13/: cpp_result.json  distance3d_result.json  pybullet_result.json
results/14/: cpp_result.json  distance3d_result.json  pybullet_result.json
results/15/: cpp_result.json  distance3d_result.json  pybullet_result.json
results/16/: cpp_result.json  distance3d_result.json  pybullet_result.json
results/17/: cpp_result.json  distance3d_result.json  pybullet_result.json
results/18/: cpp_result.json  distance3d_result.json  pybullet_result.json
results/19/: cpp_result.json  distance3d_result.json  pybullet_result.json
results/2/: cpp_result.json  distance3d_result.json  pybullet_result.json
results/20/: cpp_result.json  distance3d_result.json  pybullet_result.json
results/21/: cpp_result.json  distance3d_result.json  pybullet_result.json
results/22/: cpp_result.json  distance3d_result.json  pybullet_result.json
results/23/: cpp_result.json  distance3d_result.json  pybullet_result.json
results/24/: cpp_result.json  distance3d_result.json  pybullet_result.json
results/25/: cpp_result.json  distance3d_result.json  pybullet_result.json
results/26/: cpp_result.json  distance3d_result.json  pybullet_result.json
results/27/: cpp_result.json  distance3d_result.json  pybullet_result.json
results/28/: cpp_result.json  distance3d_result.json  pybullet_result.json
results/29/: cpp_result.json  distance3d_result.json  pybullet_result.json
results/3/: cpp_result.json  distance3d_result.json  pybullet_result.json
results/30/: cpp_result.json  distance3d_result.json  pybullet_result.json
results/31/: cpp_result.json  distance3d_result.json  pybullet_result.json
results/32/: cpp_result.json  distance3d_result.json  pybullet_result.json
results/4/: cpp_result.json  distance3d_result.json  pybullet_result.json
results/5/: cpp_result.json  distance3d_result.json  pybullet_result.json
results/6/: cpp_result.json  distance3d_result.json  pybullet_result.json
results/7/: cpp_result.json  distance3d_result.json  pybullet_result.json
results/8/: cpp_result.json  distance3d_result.json  pybullet_result.json
scripts/: README.md  build.sh  compile_hpp-fcl.sh  run_hpp-fcl.sh
test_file_creater/: analyize_atlas.py  analyize_nao.py  analyize_nao_complex.py  analyize_nao_urdf.py  analyize_ur10.py  benchmark_gjk.py  c_compare.py  create_test_file.py  from_atlas_urdf.py  from_nao_urdf.py  from_ur10_urdf.py  iterations_test.py  show_atlas.py  show_nao.py  show_nao_complex.py  show_ur10.py  show_ur10_complex.py
(+1529 files in other folders)
